--- a/about_us.html
+++ b/about_us.html
@@ -270,7 +270,7 @@
             <div class="tourguide">
               <img
                 src="images\alexander.png"
-                alt="A young asian man with dark hair and eyes smiling into the camera"
+                alt="A young man of asian heritage with dark hair and eyes are smiling into the camera"
               />
               <figcaption>ALEXANDER</figcaption>
             </div>
