--- a/exhibitions.html
+++ b/exhibitions.html
@@ -350,14 +350,14 @@
             <figure class="arrow-down">
               <img
                 src="images\icons\arrow-circle-down-orange.png"
-                alt=""
+                alt="arrow pointing downwards"
                 class="arrow-down"
               />
             </figure>
             <figure class="arrow-left-right reverse-arrow">
               <img
                 src="images\icons\arrow-circle-left-orange.png"
-                alt=""
+                alt="arrow pointing left"
                 class="arrow-left-right"
               />
             </figure>
@@ -396,14 +396,14 @@
             <figure class="arrow-down">
               <img
                 src="images\icons\arrow-circle-down-magenta.png"
-                alt=""
+                alt="arrow pointing down"
                 class="arrow-down"
               />
             </figure>
             <figure class="arrow-left-right">
               <img
                 src="images\icons\arrow-circle-right-magenta.png"
-                alt=""
+                alt="arrow pointing right"
                 class="arrow-left-right"
               />
             </figure>
@@ -433,7 +433,7 @@
             <figure>
               <img
                 src="../images/gallery-2.jpg"
-                alt="A human figure showing the inner organs"
+                alt="A model of a human body with the inner organs exposed"
               />
             </figure>
             <figure><img src="../images/gallery-3.jpg" alt="" /></figure>
