--- a/explore.html
+++ b/explore.html
@@ -230,7 +230,7 @@
           </div>
         </section>
         <div class="margins get-in-touch">
-          <p>Want to join one of our clubs?</p>
+          <p>Do You Want to join one of our clubs?</p>
           <a href="contact.html"><p class="button">GET IN TOUCH</p></a>
         </div>
 
