--- a/index.html
+++ b/index.html
@@ -218,7 +218,10 @@
           <div class="color-box" id="cosmology">
             <a href="exhibitions.html#cosmology-anchor">
               <figure id="planet">
-                <img src="images/icons/planet_white.png" alt="" />
+                <img
+                  src="images/icons/planet_white.png"
+                  alt="icon of a planet"
+                />
               </figure>
               <figcaption>COSMOLOGY</figcaption></a
             >
