Flexbox issue solved

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -229,7 +229,7 @@
                 alt="Full size exhbit of the moonlanding with an astronaut standing in front of the Lunar Module"
               />
             </figure>
-            <figure class="card-large">
+            <figure class="card-large" id="astronaut">
               <img
                 src="images\cosmology_large.jpg"
                 alt="Full size exhbit of the moonlanding with an astronaut standing in front of the Lunar Module"
