main image solved

--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@
             </div>
           </aside>
         </div>
+      </div>
+      <div class="background-container-2">
         <section class="categories">
           <div class="color-box" id="cosmology">
             <a href="exhibitions.html#cosmology-anchor">
@@ -261,14 +263,16 @@
           <span class="fa fa-clock"></span>
           <p>OPEN TODAY UNTIL 16:00</p>
         </div>
-        <p id="tour">Guided Tour 70 NOK per Person</p>
-        <p id="tickets">Online Tickets Provided by:</p>
-        <figure id="ticketmaster">
-          <img
-            src="images\icons\Ticketmaster-Logo-White.svg"
-            alt="Ticketmaster logo"
-          />
-        </figure>
+        <div class="ticketmaster">
+          <p id="tour">Guided Tour 70 NOK per Person</p>
+          <p id="tickets">Online Tickets Provided by:</p>
+          <figure id="ticketmaster">
+            <img
+              src="images\icons\Ticketmaster-Logo-White.svg"
+              alt="Ticketmaster logo"
+            />
+          </figure>
+        </div>
       </div>
 
       <div class="secondary-container">
