some bug fixing

--- a/contact.html
+++ b/contact.html
@@ -243,9 +243,8 @@
               rows="10"
               class="form"
               required="required"
-            >
-Write your message...</textarea
-            >
+              placeholder="Write your message here..."
+            ></textarea>
           </form>
           <button>SUBMIT</button>
         </section>
