--- a/about_us.html
+++ b/about_us.html
@@ -119,7 +119,9 @@
         </ul>
         <ul class="large-screen">
           <li>
-            <a href="exhibitions.html" class="purple-box">EXHIBITIONS</a>
+            <a href="exhibitions.html" class="purple-box inactive"
+              >EXHIBITIONS</a
+            >
             <div class="dropdown-info">
               <p class="header">
                 Our more than 1000 unique exhibitions are divided into 5 main
