--- a/exhibitions.html
+++ b/exhibitions.html
@@ -342,8 +342,8 @@
                 <p>
                   From useful home applications of AI to industrial uses of
                   robotics, the future is here. You can even say hello and shake
-                  the hand of Rob the Robot. Rob is a stat of the art robot,
-                  that you can iteract with.
+                  the hand of Pepper the Robot. Pepper is a stat of the art
+                  robot eager to say hello.
                 </p>
               </div>
             </div>
