--- a/explore.html
+++ b/explore.html
@@ -270,7 +270,7 @@
           </figure>
         </section>
         <div class="margins get-in-touch">
-          <p>Are you a Teacher or a Resercher?</p>
+          <p>Are you a Teacher or a Researcher?</p>
           <a href="contact.html"><p class="button">GET IN TOUCH</p></a>
         </div>
       </div>
