--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
             <hgroup>
               <h1>EXPLORE 1000+ EXHIBITIONS</h1>
               <h2>entrance is <em>FREE FOR ALL</em></h2>
-              <h2><em>GUIDED TOUR</em> every hour</h2>
+              <!-- <p>also</p> -->
+              <h2><em>GUIDED TOUR</em> every hour:</h2>
             </hgroup>
 
             <div class="button">
