--- a/visit.html
+++ b/visit.html
@@ -233,7 +233,7 @@
               allowfullscreen=""
             ></iframe>
           </div>
-          <div class="info">
+          <div class="info" id="hours">
             <h2>Hours:</h2>
             <div class="hours-wrapper_2">
               <ul>
