Some general corrections

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -342,8 +342,11 @@
                 <p>
                   From useful home applications of AI to industrial uses of
                   robotics, the future is here. You can even say hello and shake
-                  the hand of Pepper the Robot. Pepper is a stat of the art
-                  robot eager to say hello.
+                  the hand of Pepper the Robot.
+                </p>
+                <p>
+                  Pepper that you already have met on the fornt page, is human
+                  size, state of the art robot eager to say hello.
                 </p>
               </div>
             </div>
