H4 added to some pages

--- a/contact.html
+++ b/contact.html
@@ -367,7 +367,7 @@
             <p>Nygårdsgaten 112</p>
             <p>5008 Bergen, Norway</p>
           </div>
-          <a href="visit.html" class="location"
+          <a href="visit.html#map" class="location"
             ><span class="fa fa-map-marker-alt"></span>
             <p>Getting Here</p></a
           >
