--- a/explore.html
+++ b/explore.html
@@ -207,7 +207,7 @@
           </div>
           <div class="margins" id="item-2">
             <div id="club-anchor"></div>
-            <h4>Join a Childrens Club</h4>
+            <h4 class="club">Join a Childrens Club</h4>
             <h5>Young Stars Club</h5>
             <p>
               We also have the <em>Young Stars Club</em> which meets once a week
@@ -353,7 +353,7 @@
             <p>Nygårdsgaten 112</p>
             <p>5008 Bergen, Norway</p>
           </div>
-          <a href="visit.html" class="location"
+          <a href="visit.html#map" class="location"
             ><span class="fa fa-map-marker-alt"></span>
             <p>Getting Here</p></a
           >
