--- a/visit.html
+++ b/visit.html
@@ -187,6 +187,7 @@
     <main>
       <div class="main-wrapper">
         <h1 class="mobile">Visit</h1>
+        <h4>You will find us right in the center of Bergen</h4>
         <h1 class="large-screen">
           You will find us right in the center of Bergen
         </h1>
@@ -370,7 +371,7 @@
             <p>Nygårdsgaten 112</p>
             <p>5008 Bergen, Norway</p>
           </div>
-          <a href="visit.html" class="location"
+          <a href="visit.html#map" class="location"
             ><span class="fa fa-map-marker-alt"></span>
             <p>Getting Here</p></a
           >
