--- a/exhibitions.html
+++ b/exhibitions.html
@@ -187,6 +187,7 @@
     <main>
       <div class="main-wrapper">
         <h1 class="mobile">Exhibitions</h1>
+        <h4>Our Exhibits are Divided Into 5 Spaces:</h4>
         <h1 class="large-screen">Our Exhibits are Divided Into 5 Spaces</h1>
         <section class="main-content">
           <div id="cosmology-anchor"></div>
@@ -536,7 +537,7 @@
             <p>Nygårdsgaten 112</p>
             <p>5008 Bergen, Norway</p>
           </div>
-          <a href="visit.html" class="location"
+          <a href="visit.html#map" class="location"
             ><span class="fa fa-map-marker-alt"></span>
             <p>Getting Here</p></a
           >
