--- a/get_involved.html
+++ b/get_involved.html
@@ -187,6 +187,7 @@
     <main>
       <div class="main-wrapper">
         <h1 class="mobile">Get involved</h1>
+        <h4>You can support our museum in various ways:</h4>
         <h1 class="large-screen">You can support our museum in various ways</h1>
         <section class="main-content">
           <div class="support">
@@ -315,7 +316,7 @@
             <p>Nygårdsgaten 112</p>
             <p>5008 Bergen, Norway</p>
           </div>
-          <a href="visit.html" class="location"
+          <a href="visit.html#map" class="location"
             ><span class="fa fa-map-marker-alt"></span>
             <p>Getting Here</p></a
           >
