--- a/about_us.html
+++ b/about_us.html
@@ -7,12 +7,12 @@
       content="Let us explore together: learn more about us and our vision"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
-    <link rel="stylesheet" href="styles/about_us.css" />
     <script
       src="https://kit.fontawesome.com/fbd3401b24.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
+    <link rel="stylesheet" href="styles/about_us.css" />
   </head>
 
   <body>
@@ -191,7 +191,7 @@
           <div class="vision item-1">
             <p>
               Come join us at the Community Science Museum where we’re committed
-              to making science accessible to all
+              to making science accessible to all.
             </p>
           </div>
           <figure class="vision item-2">
@@ -333,20 +333,24 @@
           <h6>CONNECT:</h6>
           <ul class="connect">
             <li>
-              <a href="www.facebook.com"
+              <a href="https://www.facebook.com/"
                 ><span class="fa fa-facebook-f"></span
               ></a>
             </li>
             <li>
-              <a href="www.instagram.com"
+              <a href="https://www.instagram.com/"
                 ><span class="fa fa-instagram"></span
               ></a>
             </li>
             <li>
-              <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
+              <a href="https://www.youtube.com"
+                ><span class="fa fa-youtube"></span
+              ></a>
             </li>
             <li>
-              <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
+              <a href="https://www.twitter.com"
+                ><span class="fa fa-twitter"></span
+              ></a>
             </li>
           </ul>
         </div>
