--- a/explore.html
+++ b/explore.html
@@ -7,12 +7,12 @@
       content="Community Science Museum Bergen: Let us explore together"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
-    <link rel="stylesheet" href="styles/explore.css" />
     <script
       src="https://kit.fontawesome.com/fbd3401b24.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
+    <link rel="stylesheet" href="styles/explore.css" />
   </head>
 
   <body>
@@ -191,7 +191,7 @@
         <section class="kids">
           <div class="blue margins" id="item-1">
             <h2>For Kids</h2>
-            <p id="intro">
+            <p>
               Are you a young person looking to learn more about science? Come
               on down to our museum, there’s plenty to see and do.
             </p>
@@ -307,20 +307,24 @@
           <h6>CONNECT:</h6>
           <ul class="connect">
             <li>
-              <a href="www.facebook.com"
+              <a href="https://www.facebook.com/"
                 ><span class="fa fa-facebook-f"></span
               ></a>
             </li>
             <li>
-              <a href="www.instagram.com"
+              <a href="https://www.instagram.com/"
                 ><span class="fa fa-instagram"></span
               ></a>
             </li>
             <li>
-              <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
+              <a href="https://www.youtube.com"
+                ><span class="fa fa-youtube"></span
+              ></a>
             </li>
             <li>
-              <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
+              <a href="https://www.twitter.com"
+                ><span class="fa fa-twitter"></span
+              ></a>
             </li>
           </ul>
         </div>
