--- a/get_involved.html
+++ b/get_involved.html
@@ -186,8 +186,10 @@
 
     <main>
       <div class="main-wrapper">
-        <h1 class="mobile">Get involved</h1>
-        <h4>You can support our museum in various ways:</h4>
+        <hgroup>
+          <h1 class="mobile">Get involved</h1>
+          <h4>You can support our museum in various ways:</h4>
+        </hgroup>
         <h1 class="large-screen">You can support our museum in various ways</h1>
         <section class="main-content">
           <div class="support">
@@ -270,20 +272,20 @@
           <h6>CONNECT:</h6>
           <ul class="connect">
             <li>
-              <a href="www.facebook.com"
+              <a href="https://www.facebook.com/"
                 ><span class="fa fa-facebook-f"></span
               ></a>
             </li>
             <li>
-              <a href="www.instagram.com"
+              <a href="https://www.instagram.com/"
                 ><span class="fa fa-instagram"></span
               ></a>
             </li>
             <li>
-              <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
+              <a href="https://www.youtube.com"><span class="fa fa-youtube"></span></a>
             </li>
             <li>
-              <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
+              <a href="https://www.twitter.com"><span class="fa fa-twitter"></span></a>
             </li>
           </ul>
         </div>
