--- a/visit.html
+++ b/visit.html
@@ -7,12 +7,12 @@
       content="Information page. Learn more about admission, location, hours and our facilities"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
-    <link rel="stylesheet" href="styles/visit.css" />
     <script
       src="https://kit.fontawesome.com/fbd3401b24.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
+    <link rel="stylesheet" href="styles/visit.css" />
   </head>
 
   <body>
@@ -186,8 +186,10 @@
 
     <main>
       <div class="main-wrapper">
-        <h1 class="mobile">Visit</h1>
-        <h4>You will find us right in the center of Bergen</h4>
+        <hgroup>
+          <h1 class="mobile">Visit</h1>
+          <h4>You will find us right in the center of Bergen</h4>
+        </hgroup>
         <h1 class="large-screen">
           You will find us right in the center of Bergen
         </h1>
@@ -325,20 +327,24 @@
           <h6>CONNECT:</h6>
           <ul class="connect">
             <li>
-              <a href="www.facebook.com"
+              <a href="https://www.facebook.com/"
                 ><span class="fa fa-facebook-f"></span
               ></a>
             </li>
             <li>
-              <a href="www.instagram.com"
+              <a href="https://www.instagram.com/"
                 ><span class="fa fa-instagram"></span
               ></a>
             </li>
             <li>
-              <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
+              <a href="https://www.youtube.com"
+                ><span class="fa fa-youtube"></span
+              ></a>
             </li>
             <li>
-              <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
+              <a href="https://www.twitter.com"
+                ><span class="fa fa-twitter"></span
+              ></a>
             </li>
           </ul>
         </div>
