--- a/exhibitions.html
+++ b/exhibitions.html
@@ -9,12 +9,12 @@
     Ecology. Learn more about each category and get a sneak peek."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
-    <link rel="stylesheet" href="styles/exhibitions.css" />
     <script
       src="https://kit.fontawesome.com/fbd3401b24.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
+    <link rel="stylesheet" href="styles/exhibitions.css" />
   </head>
 
   <body>
@@ -186,8 +186,10 @@
 
     <main>
       <div class="main-wrapper">
-        <h1 class="mobile">Exhibitions</h1>
-        <h4>Our Exhibits are Divided Into 5 Spaces:</h4>
+        <hgroup>
+          <h1 class="mobile">Exhibitions</h1>
+          <h4>Our Exhibits are Divided Into 5 Spaces:</h4>
+        </hgroup>
         <h1 class="large-screen">Our Exhibits are Divided Into 5 Spaces</h1>
         <section class="main-content">
           <div id="cosmology-anchor"></div>
@@ -491,20 +493,24 @@
           <h6>CONNECT:</h6>
           <ul class="connect">
             <li>
-              <a href="www.facebook.com"
+              <a href="https://www.facebook.com/"
                 ><span class="fa fa-facebook-f"></span
               ></a>
             </li>
             <li>
-              <a href="www.instagram.com"
+              <a href="https://www.instagram.com/"
                 ><span class="fa fa-instagram"></span
               ></a>
             </li>
             <li>
-              <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
+              <a href="https://www.youtube.com"
+                ><span class="fa fa-youtube"></span
+              ></a>
             </li>
             <li>
-              <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
+              <a href="https://www.twitter.com"
+                ><span class="fa fa-twitter"></span
+              ></a>
             </li>
           </ul>
         </div>
