--- a/about_us.html
+++ b/about_us.html
@@ -242,7 +242,7 @@
         </section>
         <div class="get-in-touch">
           <p>Do you have any questions?</p>
-          <a href=""><p class="button">GET IN TOUCH</p></a>
+          <a href="www.contact.html"><p class="button">GET IN TOUCH</p></a>
         </div>
 
         <section class="tourguides">
