--- a/get_involved.html
+++ b/get_involved.html
@@ -236,7 +236,7 @@
         </section>
         <div class="get-in-touch">
           <p>Do you want to help us out?</p>
-          <a href=""><p class="button">GET IN TOUCH</p></a>
+          <a href="support.html"><p class="button">GET IN TOUCH</p></a>
         </div>
 
         <div class="newsletter-wrapper">
@@ -282,10 +282,14 @@
               ></a>
             </li>
             <li>
-              <a href="https://www.youtube.com"><span class="fa fa-youtube"></span></a>
+              <a href="https://www.youtube.com"
+                ><span class="fa fa-youtube"></span
+              ></a>
             </li>
             <li>
-              <a href="https://www.twitter.com"><span class="fa fa-twitter"></span></a>
+              <a href="https://www.twitter.com"
+                ><span class="fa fa-twitter"></span
+              ></a>
             </li>
           </ul>
         </div>
