--- a/about_us.html
+++ b/about_us.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Community Science Museum - About Us</title>
+    <title>
+      Community Science Museum - Bergen: Let us explore together | Science
+      brought to life and made accessible to all
+    </title>
     <meta
       name="decription"
-      content="Let us explore together: learn more about us and our vision"
+      content="Come join us at the Community Science Museum where we're commited to making secience accessible to all. 
+      We believe science should be fun and we want to create a space where evetyone can experience the wonders of our discovery."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script
@@ -242,7 +246,7 @@
         </section>
         <div class="get-in-touch">
           <p>Do you have any questions?</p>
-          <a href="www.contact.html"><p class="button">GET IN TOUCH</p></a>
+          <a href="contact.html"><p class="button">GET IN TOUCH</p></a>
         </div>
 
         <section class="tourguides">
