--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Community Science Museum - Visit Page</title>
+    <title>
+      Community Science Museum - Bergen: Our museums contact Page and FAQ
+    </title>
     <meta
       name="decription"
-      content="Information page. Learn more about admission, location, hours and our facilities"
+      content="Get in touch with us with questions regarding bookings, 
+      how to join a club, how to support us, how to bring your students and more. 
+      This page also contains a FAQ section where you will find answers to common questions. "
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script
