--- a/exhibitions.html
+++ b/exhibitions.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Community Science Museum - Exhibitions Page</title>
+    <title>
+      Community Science Museum - Bergen: Our more than 1000 unique exhibits are
+      divided into 5 main spaces | Cosmology - Evolution - Biology and Medicine
+      - Robotics and AI - Ecology.
+    </title>
     <meta
       name="decription"
-      content="More than 1000 different exhibits divided
-    into the 5 spaces: Cosmology, Evolution, Biology-Medicine, Robotics-AI and
-    Ecology. Learn more about each category and get a sneak peek."
+      content="Learn more about each category and get a sneak peek of some of our most popular exhibits on offer. 
+    When you enter the space for robotics you will be greeted by Pepper the Robot, a human size robot you can shake hands with and talk to. 
+    We also have a real-life sized exhibit of the moonlanding, and much much more"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script
@@ -348,7 +352,7 @@
                   the hand of Pepper the Robot.
                 </p>
                 <p>
-                  Pepper that you already have met on the fornt page, is human
+                  Pepper that you already have met on the front page, is human
                   size, state of the art robot eager to say hello.
                 </p>
               </div>
