--- a/explore.html
+++ b/explore.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Community Science Museum - More to Explore</title>
+    <title>
+      Community Science Museum - Bergen: Are you a young person looking to learn
+      more about science in a fun way?
+    </title>
     <meta
       name="decription"
-      content="Community Science Museum Bergen: Let us explore together"
+      content="
+      Come on down to our new museum in Bergen and make us a visit. There is plenty to see and do; 
+      and you can also join one of our clubs that offer an experiment driven exploring in weekends and holidays.
+      As community-drive museum, we also want to work with schools to create places of learning and exploring.
+      And there is also ways for you to work with us if you are a researcher or academic"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script
