--- a/get_involved.html
+++ b/get_involved.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <title>
-      Community Science Museum - Get Involved and support our museum
+      Community Science Museum - Bergen: Get Involved and support our museum |
+      Because we need you
     </title>
     <meta
       name="decription"
-      content="Support our museum with donations, becoming a volunteer or by working here through an intenship"
+      content="There are various ways you can Support our museum. 
+      Donations are very welcome and are an important way we keep this museum open and accessible to the whole community. 
+      You van also support us by becoming a volunteer or by working here through an intenship"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
