--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Community Science Museum - Home Page: Let Us Expore Together</title>
+    <title>
+      Community Science Museum - Bergen: Visit our new interactive science
+      museum for young people and their families | More than 1000 unique
+      exhibitions.
+    </title>
     <meta
       name="decription"
-      content="More than 1000 exhibtions divided into 5 spaces for you to explore. Our museum has something "
+      content="We have more than 1000 science exhibtions divided into 5 spaces for you to explore and ineract with. 
+      Wheter you wan't to learn more about Cosmology, Evolution, Bilology and Medicine, Robotics and AI or Ecology in a fun and intruiging way, 
+      our museum has something on offer for school kids of all ages. 
+      If you are curious and wan't do dig deeper into science you are welcome to join one of our science clubs. 
+      We also have a variety of exciting special events on offer all year round."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
