--- a/visit.html
+++ b/visit.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Community Science Museum - Visit Page</title>
+    <title>Community Science Museum - Bergen: Everything you need to know if you wan't to make us an visit.</title>
     <meta
       name="decription"
-      content="Information page. Learn more about admission, location, hours and our facilities"
+      content="You will find the Community Science Museum right in the center of Bergen in Nygardsgaten 112. 
+      Entrance is free for all, and we charge only 70NOK for a guided tour.
+      We are open all days of the week except on monday. 
+      The museum has good accessibility, and we have a cafe where you can get lunches, soft drinks, 
+      coffee snacks and more as well as a shop offering great gifts and acctivity packs: "
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script
