--- a/about_us.html
+++ b/about_us.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <title>
-      Community Science Museum - Bergen: Let us explore together | Science
-      brought to life and made accessible to all
+      Community Science Museum - Bergen: | Science brought to life and made
+      accessible to all | Learn more about our museums vision and ambition
     </title>
     <meta
       name="decription"
-      content="Come join us at the Community Science Museum where we're commited to making secience accessible to all. 
-      We believe science should be fun and we want to create a space where evetyone can experience the wonders of our discovery."
+      content="Let us explore together: Come join us at the Community Science Museum where we're commited to making secience accessible to all. 
+      We believe science should be fun and we want to create a space where everyone can experience the wonders of our discoveries."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script
