--- a/exhibitions.html
+++ b/exhibitions.html
@@ -446,14 +446,24 @@
                 alt="A model of a human body with the inner organs exposed"
               />
             </figure>
-            <figure><img src="../images/gallery-3.jpg" alt="" /></figure>
+            <figure>
+              <img
+                src="../images/gallery-3.jpg"
+                alt="Excited schoolgirl with safetyglasses is soldering on a small part for a machine model"
+              />
+            </figure>
             <figure>
               <img
                 src="../images/gallery-4.jpg"
                 alt="Model of a human hearth"
               />
             </figure>
-            <figure><img src="../images/gallery-5.jpg" alt="" /></figure>
+            <figure>
+              <img
+                src="../images/gallery-5.jpg"
+                alt="a woman in lab equipment is operating a huge sylinder shaped machine"
+              />
+            </figure>
             <figure>
               <img
                 src="../images/gallery-6.jpg"
