fallback fonts added. Code cleaned

--- a/visit.html
+++ b/visit.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Community Science Museum - Bergen: Everything you need to know if you wan't to make us an visit.</title>
+    <title>
+      Community Science Museum - Bergen: Everything you need to know if you
+      wan't to make us an visit.
+    </title>
     <meta
       name="decription"
       content="You will find the Community Science Museum right in the center of Bergen in Nygardsgaten 112. 
@@ -48,7 +51,6 @@
               Sorry, No Result for Your Search, Please Try Something Else
             </p>
           </div>
-
           <label class="ticket-label" for="ticket-box">
             <span class="fa fa-ticket-alt icon"></span>
           </label>
@@ -76,7 +78,6 @@
             </form>
             <button class="ticket">PROCEED</button>
           </div>
-
           <label class="profile-label" for="profile-box">
             <span class="fa fa-user-circle icon"></span>
           </label>
@@ -108,7 +109,6 @@
           </div>
         </nav>
       </div>
-
       <nav aria-label="menu" class="menu">
         <ul class="mobile-menu">
           <label class="hamburger-label" for="hamburger-menu"
@@ -139,7 +139,6 @@
               <p>Click to Learn More...</p>
             </div>
           </li>
-
           <li>
             <a href="explore.html" class="purple-box inactive">EXPLORE</a>
             <div class="dropdown-info">
@@ -158,7 +157,6 @@
               <p>Click to Learn More...</p>
             </div>
           </li>
-
           <li>
             <a href="get_involved.html" class="purple-box inactive"
               >GET INVOLVED</a
@@ -175,7 +173,6 @@
               <p>Click to learn more...</p>
             </div>
           </li>
-
           <li>
             <a href="visit.html" class="purple-box">VISIT</a>
             <div class="dropdown-info">
