--- a/get_involved.html
+++ b/get_involved.html
@@ -77,7 +77,6 @@
             </form>
             <button class="ticket">PROCEED</button>
           </div>
-
           <label class="profile-label" for="profile-box">
             <span class="fa fa-user-circle icon"></span>
           </label>
@@ -109,7 +108,6 @@
           </div>
         </nav>
       </div>
-
       <nav aria-label="menu" class="menu">
         <ul class="mobile-menu">
           <label class="hamburger-label" for="hamburger-menu"
@@ -140,7 +138,6 @@
               <p>Click to Learn More...</p>
             </div>
           </li>
-
           <li>
             <a href="explore.html" class="purple-box inactive">EXPLORE</a>
             <div class="dropdown-info">
@@ -159,7 +156,6 @@
               <p>Click to Learn More...</p>
             </div>
           </li>
-
           <li>
             <a href="get_involved.html" class="purple-box">GET INVOLVED</a>
             <div class="dropdown-info">
@@ -174,7 +170,6 @@
               <p>Click to learn more...</p>
             </div>
           </li>
-
           <li>
             <a href="visit.html" class="purple-box inactive">VISIT</a>
             <div class="dropdown-info">
@@ -239,9 +234,8 @@
         </section>
         <div class="get-in-touch">
           <p>Do you want to help us out?</p>
-          <a href="support.html"><p class="button">GET IN TOUCH</p></a>
+          <a href="contact.html"><p class="button">GET IN TOUCH</p></a>
         </div>
-
         <div class="newsletter-wrapper">
           <div class="blur">
             <section class="newsletter">
