--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
           <h6>CONTACT & SUPPORT:</h6>
           <ul class="contact">
             <li><a href="about_us.html">About Us</a></li>
-            <li><a href="visit.html">Facilities</a></li>
+            <li><a href="visit.html#facilities">Facilities</a></li>
             <li><a href="contact.html">Contact & FAQ</a></li>
             <li><p>Email: contact@cms.com</p></li>
             <li><p>Phone: 500 55 555</p></li>
