--- a/visit.html
+++ b/visit.html
@@ -218,7 +218,8 @@
             </p>
             <p>
               If you have any question, please read our
-              <a href="contact.html">FAQ</a>, or send us a question using this
+              <a href="contact.html#faq">FAQ</a>, or send us a question using
+              this
               <a href="contact.html">contact-form</a>
             </p>
           </div>
@@ -261,10 +262,9 @@
             </div>
           </div>
         </section>
+        <div id="facilities"></div>
         <section class="facilities">
-          <figure class="facilities item-1">
-            <!-- <img src="../images/handicap.jpg" alt="close up photo of a handicap parking space" /> -->
-          </figure>
+          <figure class="facilities item-1"></figure>
           <div id="accessibility" class="facilities item-2">
             <h3>Accessibility</h3>
             <p>The museum has wheelchair accessibility ramps.</p>
@@ -273,9 +273,7 @@
               visually impaired.
             </p>
           </div>
-          <figure class="facilities item-3">
-            <!-- <img src="images\cafe.jpg" alt="photo of the counter area of the cafe" /> -->
-          </figure>
+          <figure class="facilities item-3"></figure>
           <div id="food-drink" class="facilities item-4">
             <h3>Food and Drink</h3>
             <p>
@@ -283,9 +281,7 @@
               lunches, soft drinks, coffee, snacks and more.
             </p>
           </div>
-          <figure class="facilities item-5">
-            <!-- <img src="images\shop.jpg" alt="close up photo of dinosaur lego models sold in the shop" /> -->
-          </figure>
+          <figure class="facilities item-5"></figure>
           <div id="shop" class="facilities item-6">
             <h3>Shop</h3>
             <p>
@@ -387,7 +383,7 @@
           <h6>CONTACT & SUPPORT:</h6>
           <ul class="contact">
             <li><a href="about_us.html">About Us</a></li>
-            <li><a href="visit.html">Facilities</a></li>
+            <li><a href="visit.html#facilities">Facilities</a></li>
             <li><a href="contact.html">Contact & FAQ</a></li>
             <li><p>Email: contact@cms.com</p></li>
             <li><p>Phone: 500 55 555</p></li>
