--- a/contact.html
+++ b/contact.html
@@ -243,7 +243,7 @@
               placeholder="Write your message here..."
             ></textarea>
           </form>
-          <button>SUBMIT</button>
+          <button id="faq">SUBMIT</button>
         </section>
         <section class="faq">
           <h2>Frequently Asked Questions</h2>
@@ -377,7 +377,7 @@
           <h6>CONTACT & SUPPORT:</h6>
           <ul class="contact">
             <li><a href="about_us.html">About Us</a></li>
-            <li><a href="visit.html">Facilities</a></li>
+            <li><a href="visit.html#facilities">Facilities</a></li>
             <li><a href="contact.html">Contact & FAQ</a></li>
             <li><p>Email: contact@cms.com</p></li>
             <li><p>Phone: 500 55 555</p></li>
