JS added to dropdowns

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,11 @@
     ></script>
     <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
     <link rel="stylesheet" href="styles/contact.css" />
+    <link
+      rel="shortcut icon"
+      type="image"
+      href="images/icons/CSM favicon.png"
+    />
     <!-- Hotjar Tracking Code for https://cms-bergen.netlify.app/ -->
     <script>
       (function (h, o, t, j, a, r) {
