--- a/visit.html
+++ b/visit.html
@@ -20,6 +20,11 @@
     ></script>
     <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
     <link rel="stylesheet" href="styles/visit.css" />
+    <link
+      rel="shortcut icon"
+      type="image"
+      href="images/icons/CSM favicon.png"
+    />
     <!-- Hotjar Tracking Code for https://cms-bergen.netlify.app/ -->
     <script>
       (function (h, o, t, j, a, r) {
